remove colon from Comment, fix tab stops requirement from changing colors erroneously in high contrast themes

--- a/src/DetailsView/components/tab-stops/tab-stops-requirement-table.scss
+++ b/src/DetailsView/components/tab-stops/tab-stops-requirement-table.scss
@@ -7,6 +7,10 @@
     font-size: 14px;
     color: $primary-text;
     white-space: normal;
+
+    @include ms-high-contrast-override {
+        color: inherit;
+    }
 }
 
 .pass-fail-column-cell {
